<resources>
    <!-- Label for the configuration activity.  Likely will not be displayed in the interface. -->
    <string name="label_configure">Widget Configurator</string>
    <!-- Label for the fetch service.  This will show up mostly in debugging and in anything that
         lists all the services running on the device.  Likely does not require translation. -->
    <string name="label_fetchservice">DB Widget Data Fetch Service</string>

    <!-- Name of the app.  Will appear in the widget list as the name of the widget, as well as the
         top of the configuration screen.  When translating, remember that while, for instance,
         Desert Bus De L'Espoir *exists*, that's a whole other event, and this widget refers
         specifically to the thing LoadingReadyRun puts on every year.  Therefore, the exact phrase
         "Desert Bus for Hope" should be treated as a proper name. -->
    <string name="app_name">Desert Bus for Hope Widget</string>

    <!-- How much money is needed to reach the next hour of driving.  Will be the third line
         displayed for either an in-progress run or a known future run (below hours_bussed or
         hours_until_bus).  Should be all-caps where appropriate to match the style in the actual DB
         overlay. -->
    <string name="to_next_hour">NEXT HOUR: %1$s</string>
    <!-- Amount of time until the start of the next run, phrased as the amount of time until the bus
         departs.  The filled-in string is taken from DateUtils.getRelativeTimeSpanString(), meaning
         that will be translated by Android.  In English, it phrases it in terms of "In X days", "In
         X hours", etc, falling back to the month and day (i.e. "November 7") past a certain
         threshold.  I am uncertain how that is handled in other languages. -->
    <string name="hours_until_bus">The bus departs %1$s</string>

    <!-- String displayed before any useful data has been fetched.  The widget will start with this
         until data comes in. -->
    <string name="error_huh">Waiting for data…</string>
    <!-- String displayed in smaller text underneath error_huh if there is no useful data, an
         attempt to fetch data resulted in an error, and the app has determined the reason is that
         there is no network connection at present.  Remember, the error_huh string WILL remain
         visible above this. -->
    <string name="error_noconnection">(looks like there\'s no network connection?)</string>
    <!-- String displayed in smaller text underneath error_huh if there is no useful data, and an
         attempt to fetch data resulted in a general error not covered by any other error.  Should
         be phrased as if the widget is still waiting for data and hasn't given up yet.  Remember,
         the error_huh string WILL remain visible above this. -->
    <string name="error_general">(still waiting…)</string>
    <!-- String displayed in smaller text underneath to_next_hour while Desert Bus is in progress,
         there was valid data before (which is presently being displayed), but that data has become
         stale due to being unable to retrieve anything new.  This string will not appear until at
         least ten minutes have passed without an update.  See hours_until_bus for discussion about
         the filled-in string. -->
    <string name="error_nonfresh">(haven\'t been able to get fresh data since %1$s)</string>

    <!-- Accessibility string labeling the banner image. -->
    <string name="acc_banner">Shift banner</string>
    <!-- Accessibility string labeling the Rustproof Bee Shed preference icon. -->
    <string name="acc_pref_bee_shed">Rustproof Bee Shed preference icon</string>
    <!-- Accessibility string labeling the logo on top of the preference screen. -->
    <string name="acc_logo">Desert Bus for Hope Widget Logo</string>

    <!-- Author credit line for me, Nicholas Killewald.  If you are translating this, I'll add in a
         new string or set of strings for translators. -->
    <string name="author">By Nicholas Killewald</string>
    <!-- Disclaimer about how I am not actually officially related to Desert Bus for Hope. -->
    <string name="disclaimer">(who is not actually related to Desert Bus for Hope in any official capacity)</string>

    <!-- Title of the configure setting for Rustproof Bee Shed banners.  The exact phrase "Rustproof
         Bee Shed" should be treated as a proper name for reasons too weird to get into here. -->
    <string name="pref_bee_shed_title">Rustproof Bee Shed Mode</string>
    <!-- Text displayed in the configure screen if the Rustproof Bee Shed setting is toggled on.
         Describes that the widget will use Beta Flight and Dusk Guard's banners.  "Beta Flight" and
         "Dusk Guard" are proper names. -->
    <string name="pref_bee_shed_on">Will use Beta Flight and Dusk Guard banners</string>
    <!-- Text displayed in the configure screen if the Rustproof Bee Shed setting is toggled off.
         Describes that the widget will use Alpha Flight and Night Watch's banners.  "Alpha Flight"
         and "Night Watch" are proper names. -->
    <string name="pref_bee_shed_off">Will use Alpha Flight and Night Watch banners</string>

    <!-- Title of the configure setting for the vintage Omega Shift banner.  The exact phrase "Omega
         Shift" should be treated as a proper name.  "Vintage" can be swapped out with synonyms like
         "old", "classic", "legacy", etc. -->
    <string name="pref_vintage_omega_title">Vintage Omega Shift Banner</string>
    <!-- Text displayed in the configure screen if the Vintage Omega Shift Banner setting is toggled
         on.  Describes that the widget will use the older Omega Shift banner.  "Omega Shift" is a
         proper name.  Again, "vintage" can be replaced with synonyms; use the same phrasing as in
         pref_vintage_omega_title for consistency. -->
    <string name="pref_vintage_omega_on">Will use vintage Omega Shift banner</string>
    <!-- Text displayed in the configure screen if the Vintage Omega Shift Banner setting is toggled
         off.  Describes that the widget will use the newer Omega Shift banner, with a reminder that
         this means using the DB2021 version.  "Omega Shift" and "DB2021" are proper names.  Again,
         "vintage" can be replaced with synonyms; use the same phrasing as in
         pref_vintage_omega_title for consistency. -->
    <string name="pref_vintage_omega_off">Will use newer (DB2021) Omega Shift banner</string>

    <!-- Label on the button in the configure screen that will create the widget with the given
         settings. -->
    <string name="create_widget">Create Widget</string>

    <!-- Plural string for the amount of hours the bus drove in the most recent completed run, past
         tense.  Will be displayed below the final donation amount for that run. -->
    <plurals name="hours_bussed_end">
        <item quantity="one">The bus drove for %1$d hour</item>
        <item quantity="other">The bus drove for %1$d hours</item>
    </plurals>

    <!-- Plural string corresponding to the "X hours of Y so far" text on the actual DB overlay.
         Will be the second line displayed for an in-progress run (below the current donation
         amount).  Should be in all-caps, where appropriate. -->
    <plurals name="hours_bussed">
        <item quantity="one">%1$d HOUR OF %2$d SO FAR</item>
        <item quantity="other">%1$d HOURS OF %2$d SO FAR</item>
    </plurals>

    <!-- A credit for the translator.  Should be in a form similar to "(language) translation by
         (name)".  Will appear below the disclaimer on the configurator.  Note that this string will
         be blank for English, as I'm doing those strings, and I'm already credited as the author of
         the widget itself. -->
    <string name="translator"> </string>
</resources>
